--- a/public/css/student.css
+++ b/public/css/student.css
@@ -261,7 +261,7 @@ color: #524da8;
     border: none;
     border-radius: 5px;
     text-decoration: none;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 10%;
     transition: all 0.3s ease;
   }
@@ -555,6 +555,8 @@ color: #524da8;
     .imag-background p {
       font-size: 14px; /* Readable font size for smaller screens */
       margin-bottom: 15px;
+      text-align: justify;
+      margin-left: 20%;
     }
 
     .imag-background button {
@@ -732,7 +734,8 @@ color: #524da8;
 
     .cont p {
         font-size: 16px;
-        /* margin-left: 34%; */
+        margin-left: 38.5%;
+        text-align: justify;
     }
 
     .cont button {
