--- a/public/css/student2.css
+++ b/public/css/student2.css
@@ -350,17 +350,22 @@
             margin: auto;
         }
 
-        .mv-main-heading {
-            font-size: 3rem !important;
+         .mv-main-heading {
+            font-size: 2.2rem !important;
             font-weight: 700 !important;
-            color: #0a1f44 !important;
+            color: #111 !important;
             margin-bottom: 50px !important;
             line-height: 1.4 !important;
         }
 
         .mv-main-heading .accent {
-            font-size: 3rem !important;
-            color: #0644a6 !important;
+             background: linear-gradient(to right, #bb0e45, #ad0039);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 2.3rem !important;
+            /* color: #0644a6 !important; */
             position: relative !important;
             display: inline-block !important;
         }
@@ -369,7 +374,7 @@
             content: '' !important;
             width: 50% !important;
             height: 4px !important;
-            background: #0644a6 !important;
+            background: #bb0e45 !important;
             position: absolute !important;
             left: 0 !important;
             bottom: -6px !important;
